--- a/about.html
+++ b/about.html
@@ -62,6 +62,8 @@ CASSIUS
 Ha! Portia!
 BRUTUS
 She is dead.
+
+    <br><br><br><a href="https://oh-zounds.vercel.app/">take the quiz</a>
     </p>
 
   <script>
