--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@ Ha! Portia!
 BRUTUS
 She is dead.
 
-    <br><br><br><a href="https://oh-zounds.vercel.app/">take the quiz</a>
+    <br><br><br><a href="https://oh-zounds.vercel.app/">take our quiz</a>
     </p>
 
   <script>
