--- a/about.html
+++ b/about.html
@@ -63,7 +63,8 @@ Ha! Portia!
 BRUTUS
 She is dead.
 
-    <br><br><br><a href="https://oh-zounds.vercel.app/">take our quiz</a>
+<br><br><br><a href="https://www.emilymayo.com/">emilymayo.com</a>
+<br><br><a href="https://oh-zounds.vercel.app/">take our quiz</a>
     </p>
 
   <script>
