--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- <hr /> -->
 
   <nav>
-    <a href="comingSoon.html">past.</a>
+    <a href="past.html">past.</a>
       <a href="comingSoon.html">future.</a>
     <a href="about.html">about.</a>
     <a href="contact.html">contact.</a>
