safari video edits

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <img src="crownClear.png" alt="Accidental Evils Logo" class="small-logo" />
     <nav>
       <a href="index.html">home.</a>
-      <a href="comingSoon.html">past.</a>
+      <a href="past.html">past.</a>
       <a href="comingSoon.html">future.</a>
 
       <!-- <a href="about.html">about.</a> -->
