--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
 <body>
     <div class="MainText">
   <div class="video-wrapper">
-    <video id="logoVideo" autoplay muted playsinline>
+    <video id="logoVideo" id="logoVideo"
+  autoplay
+  muted
+  playsinline
+  preload="auto"
+  webkit-playsinline
+  tabindex="-1"
+>
+      
       <source src="crownSpinning.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
