--- a/past.html
+++ b/past.html
@@ -53,15 +53,44 @@
 
   <main>
     <h1>past works.</h1>
-     <div class="gallery">
-    <div class="gallery-item"><img src="gallery/image1.jpg" alt="Artwork 1"></div>
-    <div class="gallery-item"><img src="gallery/image2.jpg" alt="Artwork 2"></div>
-    <div class="gallery-item"><img src="gallery/image3.jpg" alt="Artwork 3"></div>
-    <div class="gallery-item"><img src="gallery/image4.jpg" alt="Artwork 4"></div>
-    <div class="gallery-item"><img src="gallery/image5.jpg" alt="Artwork 5"></div>
-    <div class="gallery-item"><img src="gallery/image6.jpg" alt="Artwork 6"></div>
-    <!-- Add or remove as needed -->
+
+<div class="gallery-columns">
+  <!-- Column 1 -->
+  <div class="gallery-column">
+        <div class="gallery-item"><p>JULIUS CAESAR (2022)</p></div>
+    <div class="gallery-item"><img src="images/caesar1.jpeg" alt="Caesar"></div>
+    <div class="gallery-item"><img src="images/caesar2.JPG" alt="Caesar"></div>
+    <div class="gallery-item"><img src="images/caesar4.JPG" alt="Caesar"></div><br>
+
+
   </div>
+
+  <!-- Column 2 -->
+
+  <div class="gallery-column">
+    <div class="gallery-item"><p>ANTIGONICK (2023)</p></div>
+    <div class="gallery-item"><img src="images/antigone1.jpeg" alt="Antigone"></div>
+    <div class="gallery-item"><img src="images/antigone3.JPG" alt="Antigone"></div>
+    <!-- <div class="gallery-item"><img src="images/antigone4.JPG" alt="Antigone"></div> --><br>
+
+    <div class="gallery-item"><p>CYRANO DE BERGERAC (2025)</p></div>
+    <div class="gallery-item"><img src="images/cyrano.jpg" alt="Cyrano"></div>
+    <div class="gallery-item"><img src="images/cyrano2.jpg" alt="Cyrano"></div>
+
+  </div>
+
+  <!-- Column 3 -->
+  <div class="gallery-column">
+    <div class="gallery-item"><p>AS YOU LIKE IT (2024)</p></div>
+    <div class="gallery-item"><img src="images/asyou.jpg" alt="As You Like It"></div>
+    <!-- <div class="gallery-item"><img src="images/asyou2.jpeg" alt="As You Like It"></div> -->
+    <div class="gallery-item"><img src="images/asyou3.jpg" alt="As You Like It"></div>
+    <div class="gallery-item"><img src="images/as you4.jpg" alt="As You Like It"></div>
+
+
+  </div>
+</div>
+
 
 
   <script>
